--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,13 +23,13 @@ jobs:
       - uses: matt-ball/newman-action@master
         with:
           workingDir: data
-          collection: collection/FirelyServer.postman_collection
+          collection: collection/FirelyServer.postman_collection.json
           environment: environment/firely.postman_environment.json
           reporters: cli
 
       - uses: matt-ball/newman-action@master
         with:
           folder: Invalid_data_collection
-          collection: collection/FirelyServer.postman_collection
+          collection: collection/FirelyServer.postman_collection.json
           iterationData: data/dataSet.json
           reporters: cli
