--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,5 +30,6 @@ jobs:
         with:
           workingDir: data
           folder: Invalid_data_collection
+          collection: collection/FirelyServer.postman_collection
           iterationCount: 5
-          iterationData: data/dataSet.json
+          iterationData: dataSet.json
