--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,8 +28,7 @@ jobs:
 
       - uses: matt-ball/newman-action@master
         with:
-          workingDir: data
-          folder: Invalid_data_collection
+          folder: collection/Invalid_data_collection
           collection: collection/FirelyServer.postman_collection
           iterationCount: 5
           iterationData: data/dataSet.json
